@@ -2,30 +2,32 @@ package edu.kit.rose.view.panel.segment;
 
 import edu.kit.rose.controller.attribute.AttributeController;
 import edu.kit.rose.model.roadsystem.attributes.AttributeAccessor;
+import edu.kit.rose.model.roadsystem.attributes.SpeedLimit;
 import edu.kit.rose.view.commons.EnumLocalizationUtility;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 /**
  * This is the {@link EditableAttribute} implementation for the
- * {@link edu.kit.rose.model.roadsystem.DataType} {@code BOOLEAN}.
+ * {@link edu.kit.rose.model.roadsystem.DataType} {@code SPEED_LIMIT}.
  */
-class BooleanAttribute extends SelectableAttribute<Boolean> {
+class SpeedLimitAttribute extends SelectableAttribute<SpeedLimit> {
   /**
    * Creates a new boolean attribute editor for the given {@code attribute}.
    *
    * @param attribute the attribute to display.
    * @param controller the controller that should handle attribute value updates.
    */
-  BooleanAttribute(AttributeAccessor<Boolean> attribute,
+  SpeedLimitAttribute(AttributeAccessor<SpeedLimit> attribute,
                    AttributeController controller) {
-    super(attribute, controller, List.of(true, false));
+    super(attribute, controller, Arrays.asList(SpeedLimit.values()));
   }
 
   @Override
-  protected String localizeOption(Boolean option) {
+  protected String localizeOption(SpeedLimit option) {
     Objects.requireNonNull(option);
 
-    return EnumLocalizationUtility.localizeBooleanTitle(getTranslator(), option);
+    return EnumLocalizationUtility.localizeSpeedLimitTypeTitle(getTranslator(), option);
   }
 }
